Content changed to be the same as in the psd-file

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -12,38 +12,38 @@
     <div class="wrapper">
         <article class="article">
             <h2 class="article-header navy">AGENCY PROFILE</h2>
-            <img class="article-agency-profile" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz2Y0p0vJlyURUJTvjIEp89TDctFix0oGTukU6rox66rOS3swy" alt="agency-profile.image">
-            <div class="header-base article-subheader navy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laboriosam asperiores iusto?</div>
-            <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis, numquam quibusdam nostrum atque nulla temporibus voluptatibus! Possimus deleniti provident totam est quos consequatur dignissimos porro, doloribus voluptas. Dolor nulla eveniet suscipit! Quia officiis delectus laboriosam distinctio ipsum unde adipisci.</p>
+            <div class="article-profile-image"></div>
+            <div class="header-base article-subheader navy">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit amet ornare</div>
+            <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse jew wligulawe dolor, condimentum ac justo sed, tincidunt commodo molity wer massarete. Nulla non urnatr nisi. Donec varius lectus in vestibulum auctor. Spendisse magna veliternowe dignissim eu commodo ut vestibulum nectro quam. Pellentesque imperdiet velit neque. Ut vestibulum mi sit ametwertilo ornare consectetur. Quisque sed quamhy loi justo. Nulla congue sed turpis nec lacinia.</p>
         </article>
         <article class="article">
             <h2 class="article-header navy">OUR PRINCIPLES</h2>
-            <div class="header-base article-subheader navy">In hic aspernatur molestiae quo ducimus facere possimus nobis reiciendis inventore sequi!</div>
-            <p class="article-text">Aliquam a veniam doloribus harum numquam voluptatibus tempora sint eveniet. Cum eum soluta quaerat iusto blanditiis ipsum perferendis eveniet necessitatibus molestias eius fugit ex ab inventore odio, asperiores laudantium molestiae! Dolore possimus debitis hic at ullam facilis, tempora magni quis!</p>
-            <div class="header-base article-subheader navy">In hic aspernatur molestiae quo ducimus facere possimus nobis reiciendis inventore sequi!</div>
-            <p class="article-text">Aliquam a veniam doloribus harum numquam voluptatibus tempora sint eveniet. Cum eum soluta quaerat iusto blanditiis ipsum perferendis eveniet necessitatibus molestias eius fugit ex ab inventore odio, asperiores laudantium molestiae! Dolore possimus debitis hic at ullam facilis, tempora magni quis!</p>
-            <div class="header-base article-subheader navy">In hic aspernatur molestiae quo ducimus facere possimus nobis reiciendis inventore sequi!</div>
-            <p class="article-text">Aliquam a veniam doloribus harum numquam voluptatibus tempora sint eveniet. Cum eum soluta quaerat iusto blanditiis ipsum perferendis eveniet necessitatibus molestias eius fugit ex ab inventore odio, asperiores laudantium molestiae! Dolore possimus debitis hic at ullam facilis, tempora magni quis!</p>
+            <div class="header-base article-subheader navy">Pellentesque imperdiet.</div>
+            <p class="article-text">Quisque sed quam justo. Nulla kilor congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravida telluswil. Morbi id consequat erosivamus. imperdiet ante vitae lorem varius. tristique. Phasellus tristique lectus id volutpat condimentum.</p>
+            <div class="header-base article-subheader navy">Aellentesque omperdie.</div>
+            <p class="article-text">Fuisque sed quam justo. Cngueteri sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravida tellus. Morbi idy consequat eros. Vivamus imperdiet. ante vitae lorem varius. tristique. Phasellus tristique lectus id volutpat condimentum. Mauris quam</p>
+            <div class="header-base article-subheader navy">Grellentesque imperdik. velit</div>
+            <p class="article-text">Yisque sed quam justo. Nullaongue sed turpis nec lacinia. Julla facilisi. Ut sit amet gravida tellus. Morbi idy consequat erosamus imperdiet. ante vitae lorem varius. tristique. Phasellus tristique lectus id volutpat condimentum. Mauris</p>
         </article>
         <hr color="#ddd">
         <article class="article">
             <h2 class="article-header navy">WHAT WE OFFER</h2>
-            <div class="header-base article-subheader navy">Cum pariatur aperiam quos temporibus similique excepturi, obcaecati optio quaerat commodi quis.</div>
-            <p class="article-text">Nemo quos numquam totam accusantium sit eveniet est corporis dignissimos. Quo hic assumenda sequi voluptatum, amet eum, libero officia eius ea impedit ex voluptas voluptatibus, fugit ut voluptate! Quaerat soluta distinctio repellendus saepe provident quae a consequatur dolorem impedit quam!</p>
+            <div class="header-base article-subheader navy">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vehicula eu nislew teget convallis. Vivamus sit amet fringilla nibh, et fringilla elit.</div>
+            <p class="article-text">Sed dignissim est mauris. Praesent pulvinar vestibulum lorem tristique faucibus. Quisque at tincidunt sapien. Fusce scelerisque dolor nec justo tempus, sed cursus nisl interdum. Vivamus justo mi, semper non semper nec, commodo et ipsum. Integer a porta erat. Pellentesque eu egestas purus, vitae feugiat augue. Sed lobortis tristique convallis. Mauris in diam tempor, imperdiet massa ut, euismod risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc sollicitudin pretium eros ac semper.</p>
         </article>
         <footer>
             <ul class="footer-list header-base">
-                <li><a href="#">Lorem, ipsum.</a></li>
-                <li><a href="#">Rerum, perspiciatis.</a></li>
-                <li><a href="#">Explicabo, quia.</a></li>
-                <li><a href="#">Totam, consequuntur?</a></li>
-                <li><a href="#">Obcaecati, nemo!</a></li>
+                <li><a href="#">Fgo psu dr sit amek</a></li>
+                <li><a href="#">Sem psum dr sit ametre</a></li>
+                <li><a href="#">Rame sum dr sit ame</a></li>
+                <li><a href="#">Bem psum dr sit ameteko</a></li>
+                <li><a href="#">Nem dsum dr sit amewas</a></li>
             </ul>
             <ul class="footer-list header-base">
-                <li><a href="#">Commodi, libero!</a></li>
-                <li><a href="#">Nisi, sunt!</a></li>
-                <li><a href="#">Sit, alias.</a></li>
-                <li><a href="#">Eos, aperiam?</a></li>
+                <li><a href="#">Vcem psum dr sit</a></li>
+                <li><a href="#">Zdfem psum dr sittr amewe</a></li>
+                <li><a href="#">Game sum dr sit ame</a></li>
+                <li><a href="#">Dem psum dr sit ametekot</a></li>
             </ul>
         </footer>
     </div>
