--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <article class="agency">
+        <main>
             <section class="profile">
                 <h2 class="header catch">AGENCY PROFILE</h2>
                 <div>
                     <div class="profile-image inline-block"></div>
-                    <div class="profile-img-text inline-block" >
+                    <div class="profile-img-text inline-block">
                         <h3 class="description catch">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</h3>
                         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse jew wligulawe dolor, condimentum ac justo sed, tincidunt commodo molity wer massarete. Nulla non urnatr nisi. Donec varius lectus in vestibulum auctor. Spendisse magna veliternowe dignissim eu commodo ut vestibulum nectro quam. Pellentesque imperdiet velit neque. Ut vestibulum mi sit ametwertilo ornare consectetur. Quisque sed quamhy loi justo. Nulla congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravidatylo wtellus. Morbi id wer nolit consequat eros.</p>
                     </div>
@@ -51,7 +51,7 @@
                 <p class="tmon-author catch">Mark Johnson</p>
                 <p class="tmon-depart">Director of Product Management</p>
             </aside>
-        </article>
+        </main>
         <footer>
             <ul class="footer-list catch">
                 <li class="footer-list-item">Fgo psu dr sit amek</li>
